--- a/client/src/Components/Pages/Courses/Consult/ConsultCourses.css
+++ b/client/src/Components/Pages/Courses/Consult/ConsultCourses.css
@@ -127,7 +127,7 @@
     height: auto;
 }
 
-.carousel-track {
+.carousel-track-search-course {
     display: flex;
     scroll-behavior: smooth;
     gap: 1rem;
@@ -138,13 +138,15 @@
     align-items: center;
 }
 
-.carousel-card {
+.carousel-card-search-course {
     flex: 0 0 auto;
     width: 130px;
     height: 170px;
     border-radius: 1rem;
     overflow: hidden;
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -155,18 +157,23 @@
     object-fit: cover;
 }
 
-.card-text {
+.card-text-search-course {
     position: absolute;
     bottom: 0rem;
     padding: 0.5rem;
     color: white;
-    background: linear-gradient(to top, #000000d3, transparent);
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: auto;
+        background: linear-gradient(to top, #000000d3, transparent);
+
+
 }
 
-.card-text>h4,
-.card-text>p {
+.card-text-search-course>h4,
+.card-text-search-course>p {
     width: auto;
     height: auto;
     font-size: 14px;
@@ -197,4 +204,49 @@
     height: 100%;
     object-fit: cover;
     border-radius: 1rem;
+}
+
+.error-message-search {
+  color: #e53835;
+  background-color: #e538351f;
+  font-size: 14px;
+  margin-top: 8px;
+  margin-bottom: 0;
+  text-align: left;
+  width: auto;
+  height: auto;
+  padding: 0.7rem;
+  border-radius: 10px;
+}
+
+.illustration_search,.nub1,.nub2,.nub3{
+    width: 20rem;
+    height: auto;
+}
+
+.illustration_search{
+    position: absolute;
+    top: 19rem;
+    left: 5rem;
+}
+
+.nub1{
+    position: absolute;
+    top: 6rem;
+    left: 5rem;
+    opacity: 0.3;
+}
+
+.nub2{
+    position: absolute;
+    top: 3rem;
+    right: 23rem;
+    opacity: 0.3;
+}
+
+.nub3{
+    position: absolute;
+    top: 19rem;
+    right:5rem;
+    opacity: 0.3;
 }
