--- a/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
+++ b/client/src/Components/UI/Modal_SignIn/Modal_SignIn.css
@@ -205,3 +205,67 @@
     left: 0.2rem;
 }
 
+
+.container_informationGeneral>p {
+    width: 274px;
+    height: auto;
+    font-size: 16px;
+}
+
+.option_1Account,
+.option_2Account {
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    cursor: pointer;
+}
+
+.option_2Account>img,
+.option_1Account>img {
+    width: auto;
+    height: auto;
+}
+
+.container_AccountTypeAprendiz,
+.container_AccountTypeEmpresa {
+    width: 90px;
+    height: 90px;
+    background-color: #b0b0b0;
+    border-radius: 50%;
+    opacity: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: none;
+    cursor: pointer;
+}
+
+
+.container_AccountTypeAprendiz:hover,
+.container_AccountTypeEmpresa:hover {
+    background-color: #00843D;
+    opacity: 70%;
+}
+
+.option_1Account>button>img,
+.option_2Account>button>img {
+    width: 60%;
+    height: auto;
+}
+
+.option_1Account>p,
+.option_2Account>p {
+    width: auto;
+    height: auto;
+}
+
+.container_AccountTypeAprendiz:hover img {
+    content: url('../../../assets/Icons/userGrey.png');
+}
+
+.container_AccountTypeEmpresa:hover img {
+    content: url('../../../assets/Icons/companyGrey.png');
+}
