--- a/client/src/Components/Pages/Courses/SeeCourse/SeeCourse.css
+++ b/client/src/Components/Pages/Courses/SeeCourse/SeeCourse.css
@@ -125,6 +125,24 @@
   background-color: #006633;
 }
 
+.containerImgCourse{
+  width: 220px;
+    height: 250px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .imgCourse{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+    cursor: auto;
+  }
+
 /* Responsividad */
 @media (max-width: 768px) {
   .seeCourseContainer {
