--- a/client/src/Components/Pages/Courses/AssignInstructorCourse/AssignInstructorCourse.css
+++ b/client/src/Components/Pages/Courses/AssignInstructorCourse/AssignInstructorCourse.css
@@ -34,3 +34,27 @@
 
 }
 
+.container_return_AssignInstructor {
+    width: 142px;
+    height: 142px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 44px;
+    right: 303px;
+    z-index: 1000;
+}
+
+.container_return_AssignInstructor>h5 {
+    width: auto;
+    height: auto;
+    position: relative;
+    top: 27%;
+    font-size: 18px;
+    font-weight: 400;
+    z-index: 1000;
+    color: #fff;
+    left: 4%;
+    cursor: pointer;
+}
