--- a/client/src/Components/Pages/GestionsCompany/GestionsCompany.css
+++ b/client/src/Components/Pages/GestionsCompany/GestionsCompany.css
@@ -1,4 +1,3 @@
-
 .pantallaGestionsCompany {
   width: 100%;
   height: 100%;
@@ -67,7 +66,7 @@
 
         & .filterOptionsGestionsCompany {
           width: 100%;
-          height: 50%;
+          height: 21rem;
           padding-block: 1rem;
           border-radius: 1rem;
           display: flex;
@@ -172,7 +171,7 @@
 
       & .resultTableGestionsCompany {
         width: 90%;
-        height: 60%;
+        height: auto;
         display: flex;
         flex-direction: column;
 
@@ -185,11 +184,9 @@
 
         & .scrollElement {
           width: 100%;
-          max-height: 100%;
-          height: 80%;
+          height: 23rem;
           overflow-y: scroll;
-          /* overflow-x: hidden; */
-          background: #00612e;
+          background: #00843e3f;
           display: flex;
           flex-direction: column;
           gap: 0.2rem;
@@ -209,7 +206,6 @@
           & .elementoProvisionalTabla {
             width: 100%;
             height: 50px;
-            /* background: blue; */
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -230,12 +226,12 @@
               display: flex;
               flex-direction: column;
               padding-left: 1rem;
-              padding-bottom: 0.2rem;
               gap: 0.7rem;
+              margin-top: 1rem;
 
               & .NombreEmpresaTitulo {
                 width: fit-content;
-                font-size: 12px;
+                font-size: 16px;
                 display: flex;
                 flex-direction: column;
                 height: 100%;
@@ -252,10 +248,12 @@
               width: 30%;
               height: 100%;
               padding-left: 5rem;
+              margin-top: 1.5rem;
+
 
               & span {
                 /* text-align: center; */
-                font-size: 12px;
+                font-size: 16px;
               }
             }
 
