--- a/client/src/Components/Pages/GestionsGestor/UpdateGestor/UpdateGestor.css
+++ b/client/src/Components/Pages/GestionsGestor/UpdateGestor/UpdateGestor.css
@@ -17,14 +17,13 @@
 
 .modal-bodyUpdateGestor {
     width: 800px;
-    height: 550px;
+    height: 464px;
     background-color: #1A1A1A;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     border-radius: 15px;
     overflow: hidden;
-    gap: 5rem;
 }
 
 
@@ -33,7 +32,7 @@
     height: auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     gap: 20px;
 }
 
@@ -46,9 +45,9 @@
     flex-direction: column;
 }
 
-.modal-left-update>label>input {
-    width: 15rem;
-    height: 40px;
+.modal-left-update>p>input {
+    width: 9rem;
+    height: 30px;
     margin-top: px;
     border-radius: 10px;
     border: 1px solid white;
@@ -233,9 +232,6 @@
     cursor: pointer;
 
 }
-
-
-
 
 /* Inputs en modo solo lectura */
 .read-only {
