--- a/client/src/Components/Pages/GestionsInstructor/GestionsInstructor.css
+++ b/client/src/Components/Pages/GestionsInstructor/GestionsInstructor.css
@@ -4,9 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
-
 
 
 .container_GestionsInstructor>h2 {
@@ -155,7 +153,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.carousel-container_2 {
+.carousel-container_2-results {
     width: auto;
     height: auto;
     display: flex;
@@ -166,7 +164,7 @@
 }
 
 
-.arrow {
+.arrow-results {
     font-size: 30px;
     background: none;
     border: none;
@@ -178,11 +176,11 @@
     transition: color 0.3s ease;
 }
 
-.arrow:hover {
+.arrow-results:hover {
     color: #00c853;
 }
 
-.carousel-card {
+.carousel-card-results {
     text-align: center;
     background-color: #1e1e1e;
     border-radius: 12px;
@@ -192,14 +190,14 @@
     transition: transform 0.8s ease, box-shadow 0.3s ease;
 }
 
-.carousel-image {
+.carousel-image-results {
     width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 12px;
 }
 
-.carousel-card h3 {
+.carousel-card-results h3 {
     color: white;
     margin-top: 15px;
     font-size: 18px;
@@ -207,7 +205,7 @@
     height: auto;
 }
 
-.carousel-card p {
+.carousel-card-results p {
     color: gray;
     font-size: 14px;
     margin-bottom: 15px;
@@ -228,7 +226,7 @@
     margin-top: 1rem;
 }
 
-.carousel-track {
+.carousel-track-results {
     display: flex;
     overflow: hidden;
     width: auto;
@@ -239,22 +237,21 @@
 }
 
 /* Imagen del instructor en la carta */
-.carousel-card>img {
+.carousel-card-results>img {
     width: 8rem;
     height: 11rem;
 }
 
-/* === Nuevos estilos para el efecto de escala === */
 
 /* Carta central destacada */
-.carousel-card.card-center {
+.carousel-card-results.card-center {
     transform: scale(1.1);
     z-index: 2;
     display: flex;
 }
 
 /* Cartas laterales reducidas */
-.carousel-card.card-side {
+.carousel-card-results.card-side {
     transform: scale(0.9);
     opacity: 0.7;
     display: flex;
@@ -315,4 +312,3 @@
     padding: 10px;
     font-size: 16px;
 }
-
