--- a/client/src/Components/Pages/GestionsInstructor/GestionsInstructor.css
+++ b/client/src/Components/Pages/GestionsInstructor/GestionsInstructor.css
@@ -214,7 +214,7 @@
 }
 
 .profile-btn {
-    background-color: #00c853;
+    background-color: #00843d;
     border: none;
     color: white;
     padding: 10px 20px;
