--- a/client/src/Components/Layouts/Footer/Footer.css
+++ b/client/src/Components/Layouts/Footer/Footer.css
@@ -8,14 +8,13 @@
 .footer{
     width: 100%;
     height: 2.5rem;
-    background-color: rgba(176, 176, 176, 0.13);;
-    opacity: 50%;
+    background-color: #1a1a1a;;
     display: flex;
     justify-content: center;
-    position: fixed;
     align-items: center;
-    z-index: 1;
     bottom: 0;
     color: #fff;
     font-size: 14px;
+    opacity: 87%;
 }
+
