--- a/client/src/Components/Layouts/Main/Main.css
+++ b/client/src/Components/Layouts/Main/Main.css
@@ -7,7 +7,8 @@
 
 .main {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
+    height: auto;
     background-color: #1A1A1A;
     display: flex;
     justify-content: center;
@@ -26,38 +27,25 @@
     filter: blur(100px);
 }
 
-
-.circle_2 {
-    position: absolute;
-    top: 460px;
-    left: -10px;
-    width: 200px;
-    height: 200px;
-    background-color: #00843D;
-    border-radius: 50%;
-    opacity: 0.4;
-    filter: blur(100px);
-}
-
-
 .container_main {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 10rem;
-    /* flex-wrap: wrap; */
+    margin-top: 5rem;
+    margin-bottom: 5%;
 }
 
-@media (max-width: 768px){
-    .container_main{
+@media (max-width: 768px) {
+    .container_main {
         flex-direction: column-reverse;
         align-items: center;
         margin-top: 3rem;
     }
 
-    
-    .circle , .circle_2{
+
+    .circle,
+    .circle_2 {
         display: none;
     }
 }
