--- a/client/src/Components/Pages/GestionsCompany/GestionsCompany.css
+++ b/client/src/Components/Pages/GestionsCompany/GestionsCompany.css
@@ -22,19 +22,19 @@
         padding-bottom: 1rem;
         width: 100%;
         height: 50px;
-
         font-size: 36px;
         font-weight: bolder;
+        margin-top: 2rem;
 
         & .tituloVerde {
           color: #00843d;
-          font-weight: bolder;
         }
       }
 
       & .paragraphGestionsCompany {
-        width: 100ch;
-        height: 100px;
+        width: auto;
+        height: auto;
+        margin-bottom: 3rem;
       }
     }
 
@@ -62,6 +62,7 @@
           height: 20px;
           color: #aaa;
           margin-bottom: 1rem;
+          margin-top: 3rem;
         }
 
         & .filterOptionsGestionsCompany {
@@ -72,7 +73,7 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
-          background: #444;
+          background: #b0b0b03b;
           /* padding-block: 2rem; */
 
           & .filterOptionName {
