--- a/client/src/Components/Pages/Who_we_are/Who_we_are.css
+++ b/client/src/Components/Pages/Who_we_are/Who_we_are.css
@@ -2,18 +2,16 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
 }
 
 .container_description_who {
-  width: 50%;
+  width: 60%;
   height: auto;
-
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  padding: 8rem 0 0 0;
+  margin-top:6rem;
   gap: 2rem;
   text-wrap: wrap;
 
@@ -24,7 +22,6 @@
     text-align: start;
     font-size: 42px;
     font-weight: 700;
-    letter-spacing: 3px;
     width: 80%;
     height: auto;
     color: #fff;
@@ -38,7 +35,7 @@
   & .description_who {
     width: 70%;
     height: auto;
-    text-align: start;
+    text-align: justify;
     font-weight: normal;
     font-size: 16px;
     color: #fff;
@@ -51,11 +48,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 8rem;
 }
 
 .ilustration_who > .image_who {
   width: 70%;
-  margin-top: -6rem;
+  margin-top: -4rem;
   height: auto;
 }
 
